fix back button on safari

--- a/assets/css/frontend/lp-style.css
+++ b/assets/css/frontend/lp-style.css
@@ -657,7 +657,7 @@ span.selected-standard-pill:last-child {
     margin-bottom: 5%;
 }
 .back-button {
-    background-color: rgb(19,29,33, .95);
+    background-color: rgba(19,29,33, .95);
     width: 235px;
     height: 60px;
     position: absolute;
@@ -692,7 +692,7 @@ span.selected-standard-pill:last-child {
     position: absolute;
     left: 2.5%;
     top: 45%;
-    background-color: rgb(19,29,33, .95);
+    background-color: rgba(19,29,33, .95);
     transition: all .2s ease-in;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
 }
@@ -711,7 +711,7 @@ a.lp-nav-left:hover, a.lp-nav-right:hover, a.lp-expand-img:hover {
     position: absolute;
     right: 2.5%;
     top: 45%;
-    background-color: rgb(19,29,33, .95);
+    background-color: rgba(19,29,33, .95);
     transition: all .2s ease-in;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
 }
@@ -719,7 +719,7 @@ a.lp-nav-left:hover, a.lp-nav-right:hover, a.lp-expand-img:hover {
     position: absolute;
     right: 2.5%;
     bottom: 2.5%;
-    background-color: rgb(19,29,33, .95);    
+    background-color: rgba(19,29,33, .95);    
     transition: all .2s ease-in;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
 }
